--- a/RepeatCounter/Views/Home/Index.cshtml
+++ b/RepeatCounter/Views/Home/Index.cshtml
@@ -1,3 +1,20 @@
 @{
   Layout = "_Layout";
 }
+
+<div class="container">
+  <div class="jumbotron">
+    <h1>Clunky Word Finder</h1>
+  </div>
+  <form action="/result" method="post">
+    <div class="form-group">
+      <label for="word">Word Search</label>
+        <input class="form-control" type="text" name="word-input" placeholder="What word do you want to search for?">
+    </div>
+    <div class="form-group">
+      <label for="sentence">Sentence To Search</label>
+        <input class="form-control" type="text" name="sentence-input" placeholder="What sentence do you want to search in?">
+    </div>
+    <button type="submit" class="btn btn-primary">Search!</button>
+  </form>
+</div>
