--- a/RepeatCounter/Views/Shared/_Layout.cshtml
+++ b/RepeatCounter/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Contact Book</title>
+    <title>Word Finder</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src = "js/scripts.js" type="text/javascript">
 
